logs/xsconnect.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/xsconnect'...
Listing './lib/python3.5/site-packages/xsconnect/daughterboards'...
Listing './lib/python3.5/site-packages/xsconnect/motherboards'...
Listing './lib/python3.5/site-packages/xsconnect/peripheralboards'...
Compiling './lib/python3.5/site-packages/xsconnect/xsconn.py'...
***   File "./lib/python3.5/site-packages/xsconnect/xsconn.py", line 50
    print '\nPeripherals:'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xsconnect/xsconnect.py'...
***   File "./lib/python3.5/site-packages/xsconnect/xsconnect.py", line 265
    print assignments_to_string(periphbrd, motherbrd, port, daughterbrd, pin_assignment)
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xsconnect-0.1.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
